# diffusion2d

./: README.md  output.py  pyproject.toml
murugapy_diffusion2d/: __init__.py  diffusion2d.py
